--add-exports in javaOptions